26. truncate input text with ellipsis 27. css breakpoints using css variables (:root) 28. tooltip values 29. fix breadcrumbs (should point to uid and not parent_uid)

--- a/src/main.scss
+++ b/src/main.scss
@@ -3,7 +3,29 @@
   src: local("./assets/fonts//MartianMono-Regular.ttf"),format("truetype");
 }
 
+:root {
+  --white: #fff;
+  --black: #000;
+  --bkg1: #00bbb4;
+  --gap: .4rem;
+  --big-gap: 1.6rem;
+  --vertical-margin: 2rem;
+  --highlight: #eee;
+  --task-title-font-size: 2rem;
+  --content-padding: 0 2rem;
+  --header-padding: 0 1rem;
+  --lightsalmon: oklch(79.38% 0.12483287411660951 42.42478683674435);
+  --border-color: oklch(45% 0.26 264);
+}
 
+@media (min-width: 600px) {
+  :root {
+    --task-title-font-size: 3rem;
+    --content-padding: 0;
+    --header-padding: 0;
+    
+  }
+}
 
 html { font-size: 62.5%; } 
 body {
@@ -89,17 +111,6 @@ dt, dd {
   display: inline-block;
 }
 
-:root {
-  --white: #fff;
-  --black: #000;
-  --bkg1: #00bbb4;
-  --gap: .4rem;
-  --big-gap: 1.6rem;
-  --vertical-margin: 2rem;
-  --border-color: lightsalmon;
-  --highlight: #eee;
-}
-
 .loading-overlay .loading-icon {
   &:after {
     width: 1rem !important;
@@ -112,4 +123,10 @@ dt, dd {
 .title::selection {
   background-color: #eee;
   border: 1px solid #000;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
+  overflow: hidden; 
+  white-space: nowrap;
 }
